[gd_scene load_steps=34 format=2]

[ext_resource path="res://Asset/MazeRun/Maze Run.png" type="Texture" id=1]
[ext_resource path="res://Scene/Main/gameMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Main/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/MazeRun/anak tk samping cowo.png" type="Texture" id=4]
[ext_resource path="res://Scene/GAme/MazeRun/karakter.gd" type="Script" id=5]
[ext_resource path="res://Scene/GAme/MazeRun/player.gd" type="Script" id=6]
[ext_resource path="res://Scene/GAme/MazeRun/stones.png" type="Texture" id=7]
[ext_resource path="res://Asset/MazeRun/Ayah.png" type="Texture" id=8]
[ext_resource path="res://Asset/MazeRun/Dokter.png" type="Texture" id=9]
[ext_resource path="res://Asset/MazeRun/Ibu.png" type="Texture" id=10]
[ext_resource path="res://Asset/Quicksand/MoreSugar-Thin.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Asset/MazeRun/Bu Guru.png" type="Texture" id=12]
[ext_resource path="res://Asset/MazeRun/Penjahat.png" type="Texture" id=13]
[ext_resource path="res://Scene/GAme/MazeRun/mazeRun.gd" type="Script" id=14]
[ext_resource path="res://Asset/goodTouch/audio/Maaf_2C_20Coba_20Lagi_20Ya.mp3" type="AudioStream" id=15]
[ext_resource path="res://Asset/Body Puzzle/audio/Benar.mp3" type="AudioStream" id=16]
[ext_resource path="res://Scene/GAme/goodTouch/goodTouch.tscn" type="PackedScene" id=17]
[ext_resource path="res://Asset/goodTouch/audio/Level_20bonus_2C_20bermain_20maze_20run.mp3" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 20.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 32 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 34, 33.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 33.5, 19 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 85, 29 )

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 536, 704, 168, 704, -208, 688, -192, 688, -408, 704, -392, 688, 536, 208, 520, 688, 520, 224, 80, 224, 80, 336, 64, 320, 64, 224, 0, 336, -16, 320, -16, 448, 0, 544, -408, 200, -392, 464, 304, 224, 408, 504, 408, 688, 392, 688, 392, 520, 304, 504, 288, 520, 288, 224, -392, 224, -392, 448, -208, 464, 184, 688, 168, 688, 184, 544, 168, 568, -16, 568, -16, 472, -192, 464 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 1, 4, 5 ), PoolIntArray( 6, 0, 7, 8 ), PoolIntArray( 9, 10, 11, 12 ), PoolIntArray( 11, 10, 13, 14 ), PoolIntArray( 15, 14, 13, 16 ), PoolIntArray( 5, 4, 17, 18 ), PoolIntArray( 17, 6, 8, 19 ), PoolIntArray( 20, 21, 22, 23 ), PoolIntArray( 24, 20, 23, 25 ), PoolIntArray( 24, 25, 26, 19 ), PoolIntArray( 17, 19, 26 ), PoolIntArray( 17, 26, 9 ), PoolIntArray( 17, 9, 12 ), PoolIntArray( 17, 12, 27 ), PoolIntArray( 21, 7, 0 ), PoolIntArray( 17, 27, 28 ), PoolIntArray( 18, 17, 28 ), PoolIntArray( 18, 28, 15, 29 ), PoolIntArray( 22, 21, 0 ), PoolIntArray( 30, 22, 0 ), PoolIntArray( 30, 0, 31 ), PoolIntArray( 32, 30, 31, 33 ), PoolIntArray( 16, 32, 33, 34 ), PoolIntArray( 16, 34, 35 ), PoolIntArray( 15, 16, 35 ), PoolIntArray( 15, 35, 36 ), PoolIntArray( 29, 15, 36 ), PoolIntArray( 29, 36, 3, 2 ), PoolIntArray( 0, 3, 31 ) ]
outlines = [ PoolVector2Array( -408, 200, 536, 208, 536, 704, 168, 704, -408, 704 ), PoolVector2Array( -392, 224, -392, 448, -16, 448, -16, 320, 64, 320, 64, 224 ), PoolVector2Array( -392, 688, -208, 688, -208, 464, -392, 464 ), PoolVector2Array( -192, 464, -192, 688, 168, 688, 168, 568, -16, 568, -16, 472 ), PoolVector2Array( 80, 224, 80, 336, 0, 336, 0, 544, 184, 544, 184, 688, 392, 688, 392, 520, 288, 520, 288, 224 ), PoolVector2Array( 304, 224, 304, 504, 408, 504, 408, 688, 520, 688, 520, 224 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 13 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 21 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.85098, 0.941176, 0.788235, 0.733333 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 28
shadow_color = Color( 0, 0, 0, 0.133333 )
shadow_size = 1
shadow_offset = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.533333 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.556863, 0.894118, 0.913725, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 1
outline_color = Color( 1, 1, 1, 0.121569 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 0.988235, 0.988235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.596078, 0.956863, 0.564706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=13]
size = 28
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.992157, 0.992157, 0.992157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.976471, 0.560784, 0.560784, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=14]
size = 28
font_data = ExtResource( 11 )

[node name="mazeRun" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]
backScene = ExtResource( 2 )
gameScene = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="area" type="Node2D" parent="."]

[node name="guru" type="Area2D" parent="area"]
position = Vector2( 844, 102 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/guru"]
position = Vector2( -10, 62.5 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="area/guru"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="orangA" type="Area2D" parent="area"]
position = Vector2( 573, 467 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/orangA"]
position = Vector2( 0, 31 )
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="area/orangA"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="orangTua" type="Area2D" parent="area"]
position = Vector2( 375, 595 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/orangTua"]
position = Vector2( -24, 33.5 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="area/orangTua"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="area/orangTua"]
position = Vector2( -47, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Dokter" type="Area2D" parent="area"]
position = Vector2( 144, 278 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/Dokter"]
position = Vector2( -4.5, 32 )
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="area/Dokter"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="finish" type="Area2D" parent="area"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/finish"]
position = Vector2( 184, 160 )
shape = SubResource( 15 )

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 5 )
CHARACTER_SPEED = 200.0

[node name="navMesh" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 536, -48 )
navpoly = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Navigation2D"]
position = Vector2( 1032, 656 )
collision_layer = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="karakter" type="Sprite" parent="Navigation2D/KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
offset = Vector2( 0, -115 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation2D/KinematicBody2D"]
position = Vector2( -1, -18 )
shape = SubResource( 2 )

[node name="stone" type="StaticBody2D" parent="."]
position = Vector2( 827, 637 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone"]
position = Vector2( -2, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="stone"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 434, 109, 205, 137 )

[node name="stone2" type="StaticBody2D" parent="."]
position = Vector2( 456, 396 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone2"]
position = Vector2( -2, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="stone2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 434, 109, 205, 137 )

[node name="stone3" type="StaticBody2D" parent="."]
position = Vector2( 468, 166 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone3"]
position = Vector2( -2, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="stone3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 434, 109, 205, 137 )

[node name="stone4" type="StaticBody2D" parent="."]
position = Vector2( 156, 645 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="stone4"]
position = Vector2( -2, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="stone4"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 434, 109, 205, 137 )

[node name="Tween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="QUIZ" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -175.0
margin_right = 425.0
margin_bottom = 205.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 425, 190 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="soal" type="Panel" parent="Control/QUIZ"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 7.0
margin_right = 62.0
margin_bottom = 68.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Control/QUIZ/soal"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "Soal"
align = 1
valign = 1

[node name="kalimatSoal" type="Panel" parent="Control/QUIZ"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 9.0
margin_top = -119.0
margin_right = -9.0
margin_bottom = 57.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Control/QUIZ/kalimatSoal"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "Jika di sekolah kita bertemu orang asing yang mencurigakan, Apa yang harus kita lakukan?"
align = 1
valign = 1
autowrap = true

[node name="ButtonA" type="Button" parent="Control/QUIZ"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 263.0
margin_right = -433.0
margin_bottom = -13.0
flat = true

[node name="ButtonB" type="Button" parent="Control/QUIZ"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 441.0
margin_top = 263.0
margin_right = -9.0
margin_bottom = -13.0
flat = true

[node name="jawabanA" type="Panel" parent="Control/QUIZ"]
margin_left = 25.0
margin_top = 263.0
margin_right = 415.0
margin_bottom = 367.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 195, 51 )
mouse_filter = 2
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Control/QUIZ/jawabanA"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "A. Lari dan Beritahu Guru"
align = 1
valign = 1
autowrap = true

[node name="jawabanB" type="Panel" parent="Control/QUIZ"]
margin_left = 441.0
margin_top = 263.0
margin_right = 837.0
margin_bottom = 366.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 198, 51 )
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Control/QUIZ/jawabanB"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 14 )
text = "B. Mendekati orang asing Tersebut"
align = 1
valign = 1
autowrap = true

[node name="soal" type="AudioStreamPlayer" parent="."]

[node name="jawaban" type="AudioStreamPlayer" parent="."]

[node name="salah" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Benar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="starting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[connection signal="body_entered" from="area/guru" to="." method="_on_guru_body_entered"]
[connection signal="body_entered" from="area/orangA" to="." method="_on_orangA_body_entered"]
[connection signal="body_entered" from="area/orangTua" to="." method="_on_orangTua_body_entered"]
[connection signal="body_entered" from="area/Dokter" to="." method="_on_Dokter_body_entered"]
[connection signal="body_entered" from="area/finish" to="." method="_on_finish_body_entered"]
[connection signal="pressed" from="Control/QUIZ/ButtonA" to="." method="_on_ButtonA_pressed"]
[connection signal="pressed" from="Control/QUIZ/ButtonB" to="." method="_on_ButtonB_pressed"]
